--- a/modelo_legit.ipynb
+++ b/modelo_legit.ipynb
@@ -88,6 +88,8 @@
     }
    ],
    "source": [
+    "# db from https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset?select=IMDb+movies.csv\n",
+    "\n",
     "imdb = pd.read_csv(\"IMDb movies.csv\")\n",
     "imdb.dropna(inplace=True)\n"
    ]
